kube/enviroments/dev/coordinator/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: coordinator
  namespace: dev
  labels:
    app: coordinator
    app.kubernetes.io/part-of: microphoto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coordinator
  template:
    metadata:
      labels:
        app: coordinator
    spec:
      containers:
        - name: coordinator
          image: ghcr.io/christianmz565/microphoto/coordinator:9ccdcea
          ports:
            - name: http
              containerPort: 8080
            - name: metrics
              containerPort: 9090
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
