kube/enviroments/dev/coordinator/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: coordinator
  namespace: dev
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    traefik.ingress.kubernetes.io/redirect-entry-point: https
spec:
  tls:
    - hosts:
        - api.dev.enderhost.online
      secretName: coordinator-tls
  rules:
    - host: api.dev.enderhost.online
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: coordinator
                port:
                  number: 8080
